--- a/static/main.css
+++ b/static/main.css
@@ -44,6 +44,18 @@ body{
     height:82%;
     box-shadow: 15px 17px 26px rgb(41, 41, 41,0.6);
     border-radius: 1.5%;
+    animation-name: spin;
+    animation-duration: 30000ms;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+    @keyframes spin {
+        from {
+            transform:rotate(0deg);
+        }
+        to {
+            transform:rotate(360deg);
+        }
+    }
 }
 #sidemenu{
     padding-top: 10px;
